deleted comment, increased transition z-index, and returned polyfill to ie11, to manage ie11 transition bug

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -734,7 +734,8 @@ body {
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.5);
   transition-duration: 500;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: 10000; }
   @media (max-width: 56.25em) {
     .screenchange {
       border: none; } }
